styles.css
boyd, h1, h2, h3, p, ul{
    margin:0;
    padding:0;
}

body{
    background-color: #1C3738
    ;
  }

.container{
    max-width: 1200px;
    margin: 0 auto;
    padding:20px
}

h1{
    font-family: 'SF Pro', sans-serif;
    padding-top:50px;
    margin-left:40px;
    color:white;
    font-size: 12rem;
    line-height: 1;
}

h2{
    font-family: 'SF Pro', sans-serif;
    padding-top: 100px;
    padding-bottom:100px;
    margin-left:40px;
    color:white;
    font-size: 4rem;

}

#navbar {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-content: center;
    color:#fff;
    padding: 20px;
}

#navbar ul {
    list-style: none;
    display: flex;
}

#navbar li {
    margin-right: 20px;
    font-family: 'SF Pro', sans-serif;
    font-weight: 400;
    color: white;
}

a {
    text-decoration: none;
    color: #fff;
}

a:visited{
    text-decoration: none;
    color:#fff;
}

#about-me{
    background-color: white;
    height:100vh;
}

#about-me p{
    font-family: 'SF Pro', sans-serif;
    font-weight:900;
    color:#1C3738;
    font-size: 4rem;
    margin-left: 100px;
    margin-right:100px;
    padding-top: 150px;
}

/* Media Query for responsiveness */
@media (max-width: 1040px){
    h1{
        font-size:8rem;
    }
}

